<resources>
    <string name="app_name">Yandex.Invest</string>
    <string name="stocks">Stocks</string>
    <string name="favorite">Favorite</string>
    <string name="find_company_or_ticker">Find company or ticker</string>
    <string name="popular_requests">Popular requests</string>
    <string name="chart">Chart</string>
    <string name="news">News</string>
    <string name="period_day">D</string>
    <string name="period_week">W</string>
    <string name="period_month">M</string>
    <string name="period_half_year">6M</string>
    <string name="period_year">1Y</string>
    <string name="period_all">All</string>
    <string name="error_network">Check your network connection</string>
    <string name="error_server">The server not respond. Try later</string>
    <string name="error_unknown">Unknown error</string>
</resources>