<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.App.Headline1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:text="$200.00" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/declined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.App.Headline3"
        app:layout_constraintEnd_toEndOf="@+id/price"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@id/price"
        tools:text="+$0.12 (1,15%)"
        tools:textColor="@color/green" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/periodGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/declined" />

    <RadioGroup
        android:id="@+id/periodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/day"
            style="@style/Theme.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/period_day" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/week"
            style="@style/Theme.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/period_week" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mount"
            style="@style/Theme.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/period_month" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/year"
            style="@style/Theme.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/period_year" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/all"
            style="@style/Theme.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/period_all" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>